--- a/Designs/Flying Bee/FlyingBee/FlyingBee/Base.lproj/Main.storyboard
+++ b/Designs/Flying Bee/FlyingBee/FlyingBee/Base.lproj/Main.storyboard
@@ -25,8 +25,11 @@
                                 <rect key="frame" x="120.5" y="315.5" width="134" height="36"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <state key="normal" title="Bring The Bee!">
-                                    <color key="titleColor" red="0.18431372549019609" green="0.48627450980392156" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="bringTheBees:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bqx-uM-jXA"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
