--- a/Designs/Flying Bee/FlyingBee/FlyingBee/Base.lproj/Main.storyboard
+++ b/Designs/Flying Bee/FlyingBee/FlyingBee/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,28 +15,28 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FlyingBee" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sfh-ev-guT">
-                                <rect key="frame" x="0.0" y="107" width="375" height="560"/>
+                                <rect key="frame" x="0.0" y="302" width="414" height="560"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="560" id="dSA-Ve-HRN"/>
+                                    <constraint firstAttribute="height" constant="560" id="ouF-OO-cX7"/>
                                 </constraints>
                             </skView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bzc-VU-2O7">
-                                <rect key="frame" x="16" y="20" width="343" height="79"/>
+                                <rect key="frame" x="20" y="44" width="374" height="250"/>
                                 <subviews>
                                     <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5bB-no-Fgh">
-                                        <rect key="frame" x="-15" y="-20" width="375" height="670"/>
+                                        <rect key="frame" x="-15" y="-20" width="437" height="841"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Sae-uW-DXa">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="437" height="841"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dYC-ZV-bYm">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="437" height="841"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2Jy-8d-0NO">
-                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="437" height="841"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     </view>
                                                     <vibrancyEffect>
@@ -45,35 +45,35 @@
                                                 </visualEffectView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="dYC-ZV-bYm" secondAttribute="trailing" id="Ep9-Px-EcV"/>
-                                                <constraint firstItem="dYC-ZV-bYm" firstAttribute="top" secondItem="Sae-uW-DXa" secondAttribute="top" id="Mya-Sf-W5l"/>
-                                                <constraint firstAttribute="bottom" secondItem="dYC-ZV-bYm" secondAttribute="bottom" id="j2Z-Hf-Qmx"/>
-                                                <constraint firstItem="dYC-ZV-bYm" firstAttribute="leading" secondItem="Sae-uW-DXa" secondAttribute="leading" id="xjV-ZQ-0iw"/>
+                                                <constraint firstItem="dYC-ZV-bYm" firstAttribute="leading" secondItem="Sae-uW-DXa" secondAttribute="leading" id="8fu-jA-TcX"/>
+                                                <constraint firstItem="dYC-ZV-bYm" firstAttribute="top" secondItem="Sae-uW-DXa" secondAttribute="top" id="C0k-gq-IZg"/>
+                                                <constraint firstAttribute="trailing" secondItem="dYC-ZV-bYm" secondAttribute="trailing" id="Cry-Le-dec"/>
+                                                <constraint firstAttribute="bottom" secondItem="dYC-ZV-bYm" secondAttribute="bottom" id="pUy-e5-7Mj"/>
                                             </constraints>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="670" id="vRV-2s-Ah7"/>
+                                            <constraint firstAttribute="height" constant="841" id="Lcr-yE-mUz"/>
                                         </constraints>
                                         <blurEffect style="light"/>
                                     </visualEffectView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="5bB-no-Fgh" firstAttribute="top" secondItem="Bzc-VU-2O7" secondAttribute="top" constant="-20" id="RBl-cb-b13"/>
-                                    <constraint firstAttribute="trailing" secondItem="5bB-no-Fgh" secondAttribute="trailing" constant="-17" id="Tdz-gV-0PE"/>
-                                    <constraint firstItem="5bB-no-Fgh" firstAttribute="leading" secondItem="Bzc-VU-2O7" secondAttribute="leading" constant="-15" id="pSW-1T-j4D"/>
+                                    <constraint firstItem="5bB-no-Fgh" firstAttribute="top" secondItem="Bzc-VU-2O7" secondAttribute="top" constant="-20" id="1cW-l1-I2F"/>
+                                    <constraint firstItem="5bB-no-Fgh" firstAttribute="leading" secondItem="Bzc-VU-2O7" secondAttribute="leading" constant="-15" id="Rae-DL-5aO"/>
+                                    <constraint firstAttribute="trailing" secondItem="5bB-no-Fgh" secondAttribute="trailing" constant="-48" id="Shs-ik-5wJ"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="centerX" secondItem="Sfh-ev-guT" secondAttribute="centerX" id="34c-pE-jDF"/>
-                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="AVh-Gd-0zp"/>
-                            <constraint firstItem="Sfh-ev-guT" firstAttribute="top" secondItem="Bzc-VU-2O7" secondAttribute="bottom" constant="8" symbolic="YES" id="CnJ-LX-1CA"/>
-                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Dxe-sz-QxE"/>
-                            <constraint firstItem="Sfh-ev-guT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Te5-AE-ZHC"/>
-                            <constraint firstAttribute="trailing" secondItem="Sfh-ev-guT" secondAttribute="trailing" id="bbm-Hn-b0i"/>
-                            <constraint firstItem="Sfh-ev-guT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uMq-f0-wP1"/>
+                            <constraint firstItem="Sfh-ev-guT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="0aK-Qn-rvQ"/>
+                            <constraint firstItem="Sfh-ev-guT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IcT-B2-2hg"/>
+                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="centerX" secondItem="Sfh-ev-guT" secondAttribute="centerX" id="NLl-2z-f8d"/>
+                            <constraint firstItem="Sfh-ev-guT" firstAttribute="top" secondItem="Bzc-VU-2O7" secondAttribute="bottom" constant="8" symbolic="YES" id="Re4-xj-rYb"/>
+                            <constraint firstAttribute="trailing" secondItem="Sfh-ev-guT" secondAttribute="trailing" id="gBW-ls-vTe"/>
+                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="gUR-Da-2Yn"/>
+                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="laL-c9-l2s"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
