--- a/Designs/Flying Bee/FlyingBee/FlyingBee/Base.lproj/Main.storyboard
+++ b/Designs/Flying Bee/FlyingBee/FlyingBee/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_5" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,28 +15,26 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FlyingBee" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sfh-ev-guT">
-                                <rect key="frame" x="0.0" y="302" width="414" height="560"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="560" id="ouF-OO-cX7"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="169.66666666666669" width="414" height="566.33333333333326"/>
                             </skView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bzc-VU-2O7">
-                                <rect key="frame" x="20" y="44" width="374" height="250"/>
+                                <rect key="frame" x="20" y="20" width="374" height="141.66666666666666"/>
                                 <subviews>
                                     <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5bB-no-Fgh">
-                                        <rect key="frame" x="-15" y="-20" width="437" height="841"/>
+                                        <rect key="frame" x="-20" y="0.0" width="414" height="716"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Sae-uW-DXa">
-                                            <rect key="frame" x="0.0" y="0.0" width="437" height="841"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dYC-ZV-bYm">
-                                                    <rect key="frame" x="0.0" y="0.0" width="437" height="841"/>
-                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2Jy-8d-0NO">
-                                                        <rect key="frame" x="0.0" y="0.0" width="437" height="841"/>
+                                                <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dYC-ZV-bYm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="2Jy-8d-0NO">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     </view>
                                                     <vibrancyEffect>
@@ -44,36 +42,27 @@
                                                     </vibrancyEffect>
                                                 </visualEffectView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="dYC-ZV-bYm" firstAttribute="leading" secondItem="Sae-uW-DXa" secondAttribute="leading" id="8fu-jA-TcX"/>
-                                                <constraint firstItem="dYC-ZV-bYm" firstAttribute="top" secondItem="Sae-uW-DXa" secondAttribute="top" id="C0k-gq-IZg"/>
-                                                <constraint firstAttribute="trailing" secondItem="dYC-ZV-bYm" secondAttribute="trailing" id="Cry-Le-dec"/>
-                                                <constraint firstAttribute="bottom" secondItem="dYC-ZV-bYm" secondAttribute="bottom" id="pUy-e5-7Mj"/>
-                                            </constraints>
                                         </view>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="841" id="Lcr-yE-mUz"/>
-                                        </constraints>
                                         <blurEffect style="light"/>
                                     </visualEffectView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="5bB-no-Fgh" firstAttribute="top" secondItem="Bzc-VU-2O7" secondAttribute="top" constant="-20" id="1cW-l1-I2F"/>
-                                    <constraint firstItem="5bB-no-Fgh" firstAttribute="leading" secondItem="Bzc-VU-2O7" secondAttribute="leading" constant="-15" id="Rae-DL-5aO"/>
-                                    <constraint firstAttribute="trailing" secondItem="5bB-no-Fgh" secondAttribute="trailing" constant="-48" id="Shs-ik-5wJ"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Sfh-ev-guT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="0aK-Qn-rvQ"/>
-                            <constraint firstItem="Sfh-ev-guT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IcT-B2-2hg"/>
-                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="centerX" secondItem="Sfh-ev-guT" secondAttribute="centerX" id="NLl-2z-f8d"/>
-                            <constraint firstItem="Sfh-ev-guT" firstAttribute="top" secondItem="Bzc-VU-2O7" secondAttribute="bottom" constant="8" symbolic="YES" id="Re4-xj-rYb"/>
-                            <constraint firstAttribute="trailing" secondItem="Sfh-ev-guT" secondAttribute="trailing" id="gBW-ls-vTe"/>
-                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="gUR-Da-2Yn"/>
-                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="laL-c9-l2s"/>
+                            <constraint firstItem="5bB-no-Fgh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0Ix-sv-1Bv"/>
+                            <constraint firstItem="5bB-no-Fgh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Car-4K-7TL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Sfh-ev-guT" secondAttribute="bottom" id="Cio-kU-kSX"/>
+                            <constraint firstItem="Sfh-ev-guT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dui-K8-Zeq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bzc-VU-2O7" secondAttribute="trailing" constant="20" id="Gjz-Q9-pOd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5bB-no-Fgh" secondAttribute="bottom" id="Sof-88-PUj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="5bB-no-Fgh" secondAttribute="top" id="WNr-4c-tsN"/>
+                            <constraint firstItem="Sfh-ev-guT" firstAttribute="top" secondItem="Bzc-VU-2O7" secondAttribute="bottom" constant="8" id="cxb-V0-b84"/>
+                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="height" secondItem="Sfh-ev-guT" secondAttribute="height" multiplier="1:4" id="d4q-QX-E9V"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Sfh-ev-guT" secondAttribute="trailing" id="efD-Yb-ZIf"/>
+                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="f7D-fA-VMv"/>
+                            <constraint firstItem="Bzc-VU-2O7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hGg-Ys-sEp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
